--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ pnpm-debug.log*
 backend/.env
 frontend/.env
 *.env
+.env*.local
+.env.development.local
+.env.production.local
 
 # Editor / OS junk
 .DS_Store
